--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="nav-links">
             <li class="nav-item"><a href="#home">Home</a></li>
             <li class="nav-item"><a href="#project">Projects</a></li>
-            <li class="nav-item"><a href="about">About</a></li>
+            <li class="nav-item"><a href="#about">About</a></li>
             <li class="nav-item"><a href="#contact">Contact</a></li>
         </ul>
         <div class="menu">
@@ -37,14 +37,36 @@
 
     <div class="container-fluid">
         <div class="row" id="home">
-            <h1>Hi it's Kimberly</h1>
-            <h3>A Front-End Developer and Designer</h3>
-            <button>View Projects</button> <!--When click scroll to project section-->
+            <h1>Hi I'm Kimberly</h1>
+            <h3>I am a Front-End Developer</h3>
+            <button onclick="">View My Projects</button> <!--When click scroll to project section-->
         </div>
+
         <div class="row" id="project-section">
             <h2 id="project">Projects</h2>
-            <p>Pomodoro Clock, Calculator, SleepTracker, Portfolio Site</p>
+
+            <div class="example">
+                <h4 class="example-title">Pomodoro Clock</h4>
+                <div class="row2">
+                    <div class="column">
+                        <img class="left-side"src="pomodoro.png">
+                    </div>
+                    <div class="column right-side">
+                        <h4 class="ex-title">Pomodoro Clock</h4>
+                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                        </p>
+                        <span><button>Github link</button> <button>Demo</button></span>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
+
+
         <div class="row" id="about-section">
             <h2 id="about">About</h2>
             <p>Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
