--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <h4>Kim</h4>
         </div>
         <ul class="nav-links">
-            <li class="nav-item"><a href="#home">Home</a></li>
+            <li class="nav-item"><a href="index.html">Home</a></li>
             <li class="nav-item"><a href="#project">Projects</a></li>
             <li class="nav-item"><a href="#about">About</a></li>
-            <li class="nav-item"><a href="#contact">Contact</a></li>
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu">
             <div class="line1"></div>
@@ -45,6 +45,8 @@
         <div class="row" id="project-section">
             <h2 id="project">Projects</h2>
 
+
+            <!--Pomodoro Clock-->
             <div class="example">
                 <h4 class="example-title">Pomodoro Clock</h4>
                 <div class="row2">
@@ -53,6 +55,79 @@
                     </div>
                     <div class="column right-side">
                         <h4 class="ex-title">Pomodoro Clock</h4>
+                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                        </p>
+                        <span><button>Github link</button> <button>Demo</button></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="example">
+                <h4 class="example-title">Food Journal</h4>
+                <div class="row2">
+                    <div class="column">
+                        <img class="left-side"src="pomodoro.png">
+                    </div>
+                    <div class="column right-side">
+                        <h4 class="ex-title">Food Journal</h4>
+                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                        </p>
+                        <span><button>Github link</button> <button>Demo</button></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="example">
+                <h4 class="example-title">SleepTracker App</h4>
+                <div class="row2">
+                    <div class="column">
+                        <img class="left-side"src="pomodoro.png">
+                    </div>
+                    <div class="column right-side">
+                        <h4 class="ex-title">SleepTracker App</h4>
+                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                        </p>
+                        <span><button>Github link</button> <button>Demo</button></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="example">
+                <h4 class="example-title">Spotify</h4>
+                <div class="row2">
+                    <div class="column">
+                        <img class="left-side"src="pomodoro.png">
+                    </div>
+                    <div class="column right-side">
+                        <h4 class="ex-title">Spotify</h4>
+                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
+                            from the school of Information and Computer Science. 
+                        </p>
+                        <span><button>Github link</button> <button>Demo</button></span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="example">
+                <h4 class="example-title">Twitter API</h4>
+                <div class="row2">
+                    <div class="column">
+                        <img class="left-side"src="pomodoro.png">
+                    </div>
+                    <div class="column right-side">
+                        <h4 class="ex-title">Twitter API</h4>
                         <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                             from the school of Information and Computer Science. 
                             Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
