workingon about and projects

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <ul class="nav-links">
             <li class="nav-item"><a href="index.html">Home</a></li>
-            <li class="nav-item"><a href="#project">Projects</a></li>
-            <li class="nav-item"><a href="#about">About</a></li>
+            <li class="nav-item"><a href="projects.html">Projects</a></li>
+            <li class="nav-item"><a href="about.html">About</a></li>
             <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu">
@@ -36,10 +36,12 @@
     </nav>
 
     <div class="container-fluid">
+        <div id="test">
         <div class="row" id="home">
             <h1>Hi I'm Kimberly</h1>
-            <h3>I am a Front-End Developer</h3>
+            <h3>I am a <div class="wordChange">Front-End Developer</div></h3>
             <button onclick="">View My Projects</button> <!--When click scroll to project section-->
+        </div>
         </div>
 
         <div class="row" id="project-section">
