Fixed Contact page

--- a/contact.html
+++ b/contact.html
@@ -33,25 +33,20 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid form-bg">
     
         <div class="row2" id="contact-form">
-            <div class="column cover">
-            </div>
-            <div class="column" id="form">
-                <form   
-                action="contactForm.php"
-                method="POST">
+            <div id="form">
                 <h2>Let's Get In Touch</h2>
-                <p>Feel free to contact me with any opportunities any time.
-                </p>
-                <label for="name">Name</label><br>
-                <input type="text" id="name" name="name" required><br>
-                <label for="email">Email</label><br>
-                <input type="email" id="email" name="_replyto" required><br>
-                <label for="message">Message</label><br>
-                <textarea type="text" id="message" name="message" required rows="4" cols="50"></textarea><br>
-                <button type="submit">Submit button</button>
+                <div class="gold-line"></div>
+
+                <form   
+                action="https://usebasin.com/f/14e139a94b80"
+                method="POST">
+                <input type="text" id="name" name="name" placeholder="Name" required>
+                <input type="email" id="email" name="email" placeholder="Email" required>
+                <textarea type="text" id="message" name="message" required cols="40" placeholder="Message"></textarea>
+                <button type="submit" id="submit">Submit button</button>
                 </form>
             </div>
         </div>
