cleaned up home page

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="nav-links">
             <li class="nav-item"><a href="index.html">Home</a></li>
-            <li class="nav-item"><a href="#project">Projects</a></li>
+            <li class="nav-item"><a href="projects.html">Projects</a></li>
             <li class="nav-item"><a href="#about">About</a></li>
             <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
