--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href='./main.css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Poppins&display=swap" rel="stylesheet">
     <!--Link css, javascript files, possibly bootstrap-->
     <script src="app.js"></script>
 </head>
@@ -19,12 +19,11 @@
 <body>
     <nav class="sticky">
         <div class="logo">
-            <h4>Kim</h4>
+            <h4>KF</h4>
         </div>
         <ul class="nav-links">
             <li class="nav-item"><a href="index.html">Home</a></li>
             <li class="nav-item"><a href="projects.html">Projects</a></li>
-            <li class="nav-item"><a href="about.html">About</a></li>
             <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu">
@@ -36,146 +35,108 @@
     </nav>
 
     <div class="container-fluid">
-        <div id="test">
-        <div class="row" id="home">
-            <h1>Hi I'm Kimberly</h1>
-            <h3>I am a <div class="wordChange">Front-End Developer</div></h3>
-            <button onclick="">View My Projects</button> <!--When click scroll to project section-->
-        </div>
-        </div>
-
-        <div class="row" id="project-section">
-            <h2 id="project">Projects</h2>
+        
+        <!--Home section-->
+        <section class="row-home white-bg">
+                <div class="column-home testing"></div>
 
 
-            <!--Pomodoro Clock-->
-            <div class="example">
-                <h4 class="example-title">Pomodoro Clock</h4>
-                <div class="row2">
-                    <div class="column">
-                        <img class="left-side"src="pomodoro.png">
+                <div class="column-home2 test">
+                    <h1 class="spacing-below">Kimberly Flores</h1>
+                    <div class="career">
+                        <p class="spacing-below">Front-End Developer</p>
+                        <p class="spacing-below">UX/UI Designer</p>
+                        <p class="spacing-below">Graphic Designer</p>
                     </div>
-                    <div class="column right-side">
-                        <h4 class="ex-title">Pomodoro Clock</h4>
-                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                        </p>
-                        <span><button>Github link</button> <button>Demo</button></span>
+                    <div>
+                        <a class="btn2"href="projects.html">View My Work</a>
+                    </div>
+                </div>
+
+
+        </section>
+
+
+    <!--Services-->
+    <section class="white-bg" id="service-section">
+        <div class="row heading">
+            <h2>Services</h2>
+            <div class="line"></div>
+        </div>
+
+        <div class="row2">
+            <div class="column-3">
+                <h3 class="service-type">Development</h3>
+                <ul class="service">
+                    <li>HTML5/CSS3/Sass</li>
+                    <li>React, Redux</li>
+                    <li>JavaScript</li>
+                    <li>Single Page Apps</li>
+                    <li>Responsive Designs</li>
+                </ul>
+            </div>
+            <div class="column-3">
+                <h3 class="service-type">UX/UI</h3>
+                <ul class="service">
+                    <li>User Testing</li>
+                    <li>Competitive Analysis</li>
+                    <li>A/B Testing</li>
+                    <li>High Fidelty Wireframes</li>
+                    <li>Storyboards</li>
+                    <li>Prototypes</li>
+                </ul>
+            </div>
+            <div class="column-3">
+                <h3 class="service-type">Graphics</h3>
+                <ul class="service">
+                    <li>Logos</li>
+                    <li>Icons</li>
+                    <li>Brand Identity</li>
+                    <li>Photoshop, Illustrator</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
+        <!--About Section-->
+        <section class="white-bg" id="about-section">
+            <div class="row heading">
+                <h2>Meet Kimberly Flores</h2>
+                <div class="line"></div>
+            </div>
+            <div class="row2">
+                <div class="column" id="image">
+                    <img src="about.jpg" id="img"/>
+                </div>
+                <div class="column" >
+                    <div id="about">
+                    <p class="spacing-below">
+                        Hello! I recently graduated from the 
+                        University of California, Irvine with a B.S. in Informatics and 
+                        specialization in Human-Computer Interaction (HCI). What's Informatics 
+                        you ask? It's designing software based on how people interact with 
+                        technologies. During my time, my passion for creating user-centric designs 
+                        started and I dove into the world of User Experience Design and Research. I 
+                        gained techniques on how to create such designs by getting to know my users 
+                        first and getting them involved in the process. I then honed my skills in web 
+                        development. I've built out apps with a team and on my own. With both design and 
+                        code, I am able to create a product that my users like. I am currently looking 
+                        for a career in front-end development or UX/UI design.</p>
+                    <a href="" class="btn2">Resume</a>
                     </div>
                 </div>
             </div>
-
-            <div class="example">
-                <h4 class="example-title">Food Journal</h4>
-                <div class="row2">
-                    <div class="column">
-                        <img class="left-side"src="pomodoro.png">
-                    </div>
-                    <div class="column right-side">
-                        <h4 class="ex-title">Food Journal</h4>
-                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                        </p>
-                        <span><button>Github link</button> <button>Demo</button></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="example">
-                <h4 class="example-title">SleepTracker App</h4>
-                <div class="row2">
-                    <div class="column">
-                        <img class="left-side"src="pomodoro.png">
-                    </div>
-                    <div class="column right-side">
-                        <h4 class="ex-title">SleepTracker App</h4>
-                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                        </p>
-                        <span><button>Github link</button> <button>Demo</button></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="example">
-                <h4 class="example-title">Spotify</h4>
-                <div class="row2">
-                    <div class="column">
-                        <img class="left-side"src="pomodoro.png">
-                    </div>
-                    <div class="column right-side">
-                        <h4 class="ex-title">Spotify</h4>
-                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                        </p>
-                        <span><button>Github link</button> <button>Demo</button></span>
-                    </div>
-                </div>
-            </div>
+        </section>
 
 
-            <div class="example">
-                <h4 class="example-title">Twitter API</h4>
-                <div class="row2">
-                    <div class="column">
-                        <img class="left-side"src="pomodoro.png">
-                    </div>
-                    <div class="column right-side">
-                        <h4 class="ex-title">Twitter API</h4>
-                        <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                            Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                            from the school of Information and Computer Science. 
-                        </p>
-                        <span><button>Github link</button> <button>Demo</button></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-
-        <div class="row" id="about-section">
-            <h2 id="about">About</h2>
-            <p>Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                from the school of Information and Computer Science. 
-            </p>
-            <p>Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                from the school of Information and Computer Science. 
-            </p>
-            <p>Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                from the school of Information and Computer Science. 
-            </p>
-            <p>Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                from the school of Information and Computer Science. 
-            </p>
-            <p>Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                from the school of Information and Computer Science. 
-            </p>
-        </div>
-        <div class="row" id="contact-section">
-            <h2 id="contact">Let's get in touch</h2>
-        </div>
-    <!--navbar-->
-    <!--
-        1.jumbotron
-        2.projects
-        3.about
-        4.contact
-    -->
-    <div class="row" id="footer">
-        <i class="fab fa-linkedin fa-3x"></i>
-        <i class="fab fa-github fa-3x"></i>
+    <!--Footer-->
+    <footer class="row" id="footer">
+        <a href="https://www.linkedin.com/in/kimberly-m-flores/" target="_blank"><i class="fab fa-linkedin fa-2x spacing-below"></i></a>
+        <a href="https://github.com/kimberlyflrs/" target="_blank"><i class="fab fa-github fa-2x spacing-below"></i></a>
         <p>Designed and Developed by Kimberly Flores<p>
-    </div>
+        <p>Copyright and Rights Reserved © 2020</p>
+    </footer>
+
     </div>
 </body>
