--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href='./main.css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Poppins&display=swap" rel="stylesheet">
     <!--Link css, javascript files, possibly bootstrap-->
     <script src="app.js"></script>
 </head>
@@ -37,6 +37,13 @@
     </nav>
 
     <div class="container-fluid">
+        <div class="row2" id="home">
+            <div class="column"></div>
+            <div class="column"><p class="white">Projects</p></div>
+        </div>
+
+
+
         <!--Pomodoro Clock-->
         <div class="example">
             <h4 class="example-title">Pomodoro Clock</h4>
@@ -130,9 +137,14 @@
         </div>
     </div>
 
-    <div class="row" id="footer">
-        <i class="fab fa-linkedin fa-3x"></i>
-        <i class="fab fa-github fa-3x"></i>
-        <p>Designed and Developed by Kimberly Flores<p>
-    </div>
+    <footer class="row2" id="footer">
+        <div class="column">
+            <p class="spacing-below">Designed and Developed by Kimberly Flores<p>
+            <p>Copyright and Rights Reserved © 2020</p>
+        </div>
+        <div class="column">
+            <i class="fab fa-linkedin fa-2x spacing-below"></i>
+            <i class="fab fa-github fa-2x spacing-below"></i>
+        </div>
+    </footer>
 </body>
