updated project page

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href='./main.css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&family=Poppins&display=swap" rel="stylesheet">
     <!--Link css, javascript files, possibly bootstrap-->
     <script src="app.js"></script>
 </head>
@@ -18,18 +18,18 @@
 <body>
     <nav class="sticky">
         <div class="logo">
-            <h4>Kim</h4>
+            <h4>KF</h4>
         </div>
         <ul class="nav-links">
             <li class="nav-item"><a href="index.html">Home</a></li>
             <li class="nav-item"><a href="projects.html">Projects</a></li>
-            <li class="nav-item"><a href="#about">About</a></li>
             <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
+
         </div>
     </nav>
 
@@ -52,11 +52,12 @@
         </div>
 
 
-        <div class="row" id="footer">
-            <i class="fab fa-linkedin fa-3x"></i>
-            <i class="fab fa-github fa-3x"></i>
+        <footer class="row" id="footer">
+            <a href="https://www.linkedin.com/in/kimberly-m-flores/" target="_blank"><i class="fab fa-linkedin fa-2x spacing-below"></i></a>
+            <a href="https://github.com/kimberlyflrs/" target="_blank"><i class="fab fa-github fa-2x spacing-below"></i></a>
             <p>Designed and Developed by Kimberly Flores<p>
-        </div>
+            <p>Copyright and Rights Reserved © 2020</p>
+        </footer>
     </div>
     
 </body>
