--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container-fluid">
         
         <!--Home section-->
-        <section class="row-home white-bg">
+        <section class="row-home">
                 <div class="column-home testing"></div>
 
 
@@ -58,7 +58,7 @@
 
 
     <!--Services-->
-    <section class="white-bg" id="service-section">
+    <section id="service-section">
         <div class="row heading">
             <h2>Services</h2>
             <div class="line"></div>
@@ -100,7 +100,7 @@
 
 
         <!--About Section-->
-        <section class="white-bg" id="about-section">
+        <section id="about-section">
             <div class="row heading">
                 <h2>Meet Kimberly Flores</h2>
                 <div class="line"></div>
