--- a/projects.html
+++ b/projects.html
@@ -11,21 +11,19 @@
 
     <link rel="stylesheet" href='./main.css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&family=Poppins&display=swap" rel="stylesheet">
     <!--Link css, javascript files, possibly bootstrap-->
     <script src="app.js"></script>
 </head>
 
 <body>
-
     <nav class="sticky">
         <div class="logo">
-            <h4>Kim</h4>
+            <h4>KF</h4>
         </div>
         <ul class="nav-links">
             <li class="nav-item"><a href="index.html">Home</a></li>
             <li class="nav-item"><a href="projects.html">Projects</a></li>
-            <li class="nav-item"><a href="about.html">About</a></li>
             <li class="nav-item"><a href="contact.html">Contact</a></li>
         </ul>
         <div class="menu">
@@ -37,114 +35,135 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row2" id="home">
-            <div class="column"></div>
-            <div class="column"><p class="white">Projects</p></div>
-        </div>
+        <section class="row-home">
+            <div class="column-home beach">
+            </div> 
+            <div class="column-home2 project">
+                <h1>Projects</h1>
+            </div> 
+        </section>
 
+        <section id="filter">
+            <div class="row filter">
+                <h3>Filter</h3>
+                <button class="filter-btn all active-btn" onclick= "filterProjects('filterProject')">Show All</button>
+                <button class="filter-btn code" onclick = "filterProjects('code')">Code</button>
+                <button class="filter-btn ux" onclick="filterProjects('ux')">UX/UI</button>
+                <button class="filter-btn graphics" onclick="filterProjects('graphics')">Graphics</button>
+            </div>
+        </section>
 
-
+        <section class="projects">
         <!--Pomodoro Clock-->
-        <div class="example">
-            <h4 class="example-title">Pomodoro Clock</h4>
+        <div class="filterProject code show">
+            <h4 class="sm-project-title">Pomodoro Clock</h4>
+            <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="pomodoro.png">
                 </div>
                 <div class="column right-side">
-                    <h4 class="ex-title">Pomodoro Clock</h4>
+                    <h4 class="project-title">Pomodoro Clock</h4>
+                    <div class="project-line"></div>
                     <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                         Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                     </p>
-                    <span><button>Github link</button> <button>Demo</button></span>
+                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
                 </div>
             </div>
         </div>
 
-        <div class="example">
-            <h4 class="example-title">Food Journal</h4>
+        <div class="filterProject ux">
+            <h4 class="sm-project-title">Food Journal</h4>
+            <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="pomodoro.png">
                 </div>
                 <div class="column right-side">
-                    <h4 class="ex-title">Food Journal</h4>
+                    <h4 class="project-title">Food Journal</h4>
+                    <div class="project-line"></div>
                     <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                         Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                     </p>
-                    <span><button>Github link</button> <button>Demo</button></span>
+                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
                 </div>
             </div>
         </div>
 
-        <div class="example">
-            <h4 class="example-title">SleepTracker App</h4>
+        <div class="filterProject code">
+            <h4 class="sm-project-title">SleepTracker App</h4>
+            <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="pomodoro.png">
                 </div>
                 <div class="column right-side">
-                    <h4 class="ex-title">SleepTracker App</h4>
+                    <h4 class="project-title">SleepTracker App</h4>
+                    <div class="project-line"></div>
                     <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                         Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                     </p>
-                    <span><button>Github link</button> <button>Demo</button></span>
+                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
                 </div>
             </div>
         </div>
 
-        <div class="example">
-            <h4 class="example-title">Spotify</h4>
+        <div class="filterProject code">
+            <h4 class="sm-project-title">Spotify</h4>
+            <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="pomodoro.png">
                 </div>
                 <div class="column right-side">
-                    <h4 class="ex-title">Spotify</h4>
+                    <h4 class="project-title">Spotify</h4>
+                    <div class="project-line"></div>
                     <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                         Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                     </p>
-                    <span><button>Github link</button> <button>Demo</button></span>
+                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
                 </div>
             </div>
         </div>
 
 
-        <div class="example">
-            <h4 class="example-title">Twitter API</h4>
+        <div class="filterProject code">
+            <h4 class="sm-project-title code">Twitter API</h4>
+            <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="pomodoro.png">
                 </div>
                 <div class="column right-side">
-                    <h4 class="ex-title">Twitter API</h4>
+                    <h4 class="project-title">Twitter API</h4>
+                    <div class="project-line"></div>
                     <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                         Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
                         from the school of Information and Computer Science. 
                     </p>
-                    <span><button>Github link</button> <button>Demo</button></span>
+                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
                 </div>
             </div>
         </div>
-    </div>
+        </section>
 
-    <footer class="row2" id="footer">
-        <div class="column">
-            <p class="spacing-below">Designed and Developed by Kimberly Flores<p>
-            <p>Copyright and Rights Reserved © 2020</p>
-        </div>
-        <div class="column">
-            <i class="fab fa-linkedin fa-2x spacing-below"></i>
-            <i class="fab fa-github fa-2x spacing-below"></i>
-        </div>
+
+    <footer class="row" id="footer">
+        <a href="https://www.linkedin.com/in/kimberly-m-flores/" target="_blank"><i class="fab fa-linkedin fa-2x spacing-below"></i></a>
+        <a href="https://github.com/kimberlyflrs/" target="_blank"><i class="fab fa-github fa-2x spacing-below"></i></a>
+        <p>Designed and Developed by Kimberly Flores<p>
+        <p>Copyright and Rights Reserved © 2020</p>
     </footer>
+
+</div>
 </body>
