Updated project descriptions and pictures

--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,28 @@
         </section>
 
         <section class="projects">
+        <!--Recipe Keeps-->
+        <div class="filterProject code show">
+            <h4 class="sm-project-title">Recipe Keeps</h4>
+            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="row2">
+                <div class="column">
+                    <img class="left-side"src="recipekeeps.png">
+                </div>
+                <div class="column right-side">
+                    <h4 class="project-title">Recipe Keeps</h4>
+                    <div class="project-line"></div>
+                    <p>Keep track of all your recipes in one single place. Users can create an account where they 
+                        can add, delete, and edit their own recipes. 
+                    </p>
+                    <p>Tools/Frameworks: React, Redux, Express, Nodejs, MongoDB, AWS-S3, Bootstrap, React router 
+                    </p>
+                    <span><a class="project-btn" href="https://github.com/kimberlyflrs/recipe-keeps">Github link</a> <a class="project-btn" href="https://obscure-taiga-26298.herokuapp.com/">Demo</a></span>
+                </div>
+            </div>
+        </div>
+
+
         <!--Pomodoro Clock-->
         <div class="filterProject code show">
             <h4 class="sm-project-title">Pomodoro Clock</h4>
@@ -65,93 +87,66 @@
                 <div class="column right-side">
                     <h4 class="project-title">Pomodoro Clock</h4>
                     <div class="project-line"></div>
-                    <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
-                        Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
+                    <p>A timer that follows the pomodoro technique (focus on a task for 25 minutes, take a break for 5 minutes). The times are 
+                        adjustable for break and session length.
                     </p>
-                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
+                    <p>Tools/Frameworks: React, Redux, Bootstrap</p>
+                    <span><a class="project-btn" href="https://github.com/kimberlyflrs/pomodoro-clock">Github link</a> <a class="project-btn" href="https://pomodoro-clock-kf.herokuapp.com/">Demo</a></span>
                 </div>
             </div>
         </div>
 
         <div class="filterProject ux">
-            <h4 class="sm-project-title">Food Journal</h4>
+            <h4 class="sm-project-title">Multiplication Quiz</h4>
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
-                    <img class="left-side"src="pomodoro.png">
+                    <img class="left-side"src="multiplication.png">
                 </div>
                 <div class="column right-side">
-                    <h4 class="project-title">Food Journal</h4>
+                    <h4 class="project-title">Multiplication Quiz</h4>
                     <div class="project-line"></div>
-                    <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
-                        Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
+                    <p>A web-based application that allows users to practice 1-12 multiplication tables in 
+                        different game modes. A user can practice a specific multiplication table, answer as 
+                        many questions in a minute, or answer 10 random multiplication questions. 
                     </p>
-                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
+                    <p>Tools/Frameworks: HTML5, CSS3, JavaScript, Bootstrap</p>
+                    <span><a class="project-btn" href="https://github.com/kimberlyflrs/Multiplication-Quiz">Github link</a> <a class="project-btn" href="https://multiplication-pracctice-quiz.herokuapp.com/">Demo</a></span>
                 </div>
             </div>
         </div>
 
         <div class="filterProject code">
-            <h4 class="sm-project-title">SleepTracker App</h4>
+            <h4 class="sm-project-title">Portfolio Website</h4>
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
-                    <img class="left-side"src="pomodoro.png">
+                    <img class="left-side"src="portfolio.png">
                 </div>
                 <div class="column right-side">
-                    <h4 class="project-title">SleepTracker App</h4>
+                    <h4 class="project-title">Portfolio Website</h4>
                     <div class="project-line"></div>
-                    <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
-                        Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
+                    <p>A website showcasing my coding, ui/ux, and design projects.
                     </p>
-                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
+                    <p>Tools/Frameworks: HTML5, CSS3, JavaScript</p>
+                    <span><a class="project-btn" href="https://github.com/kimberlyflrs/code-portfolio">Github link</a> <a class="project-btn">Demo</a></span>
                 </div>
             </div>
         </div>
 
         <div class="filterProject code">
-            <h4 class="sm-project-title">Spotify</h4>
+            <h4 class="sm-project-title">Jewlery Shop Page</h4>
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
-                    <img class="left-side"src="pomodoro.png">
+                    <img class="left-side"src="jewleryshop.png">
                 </div>
                 <div class="column right-side">
-                    <h4 class="project-title">Spotify</h4>
+                    <h4 class="project-title">Jewlery Shop Page</h4>
                     <div class="project-line"></div>
-                    <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
-                        Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
+                    <p>A home page for a jewlery shop. This is a single coded home page. All other pages do not link anywhere.
                     </p>
-                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="filterProject code">
-            <h4 class="sm-project-title code">Twitter API</h4>
-            <div class="greenline"><div class="sm-project-line"></div></div>
-            <div class="row2">
-                <div class="column">
-                    <img class="left-side"src="pomodoro.png">
-                </div>
-                <div class="column right-side">
-                    <h4 class="project-title">Twitter API</h4>
-                    <div class="project-line"></div>
-                    <p>Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
-                        Project description is here.Recent graduate from University of California, Irvine where I obtained my B.S. in Informatics
-                        from the school of Information and Computer Science. 
-                    </p>
-                    <span><button class="project-btn">Github link</button> <button class="project-btn">Demo</button></span>
+                    <span><a class="project-btn" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> <a class="project-btn" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a></span>
                 </div>
             </div>
         </div>
