fixed link padding

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
 
         <section class="projects">
         <!--Recipe Keeps-->
-        <div class="filterProject code show">
+        <div class="code-project">
             <h4 class="sm-project-title">Recipe Keeps</h4>
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
@@ -70,14 +70,17 @@
                     </p>
                     <p>Tools/Frameworks: React, Redux, Express, Nodejs, MongoDB, AWS-S3, Bootstrap, React router 
                     </p>
-                    <span><a class="project-btn" href="https://github.com/kimberlyflrs/recipe-keeps">Github link</a> <a class="project-btn" href="https://obscure-taiga-26298.herokuapp.com/">Demo</a></span>
+                    <div class="link-div">
+                        <a class="links" href="https://github.com/kimberlyflrs/recipe-keeps">Github link</a> 
+                        <a class="links" href="https://obscure-taiga-26298.herokuapp.com/">Demo</a>
+                    </div>
                 </div>
             </div>
         </div>
 
 
         <!--Pomodoro Clock-->
-        <div class="filterProject code show">
+        <div class="code-project">
             <h4 class="sm-project-title">Pomodoro Clock</h4>
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
@@ -91,12 +94,15 @@
                         adjustable for break and session length.
                     </p>
                     <p>Tools/Frameworks: React, Redux, Bootstrap</p>
-                    <span><a class="project-btn" href="https://github.com/kimberlyflrs/pomodoro-clock">Github link</a> <a class="project-btn" href="https://pomodoro-clock-kf.herokuapp.com/">Demo</a></span>
+                    <div class="link-div">
+                        <a class="links" href="https://github.com/kimberlyflrs/pomodoro-clock">Github link</a> 
+                        <a class="links" href="https://pomodoro-clock-kf.herokuapp.com/">Demo</a></span>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="filterProject ux">
+        <div class="code-project">
             <h4 class="sm-project-title">Multiplication Quiz</h4>
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
@@ -111,12 +117,15 @@
                         many questions in a minute, or answer 10 random multiplication questions. 
                     </p>
                     <p>Tools/Frameworks: HTML5, CSS3, JavaScript, Bootstrap</p>
-                    <span><a class="project-btn" href="https://github.com/kimberlyflrs/Multiplication-Quiz">Github link</a> <a class="project-btn" href="https://multiplication-pracctice-quiz.herokuapp.com/">Demo</a></span>
+                    <div class="link-div">
+                        <a class="links" href="https://github.com/kimberlyflrs/Multiplication-Quiz">Github link</a> 
+                        <a class="links" href="https://multiplication-pracctice-quiz.herokuapp.com/">Demo</a>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="filterProject code">
+        <div class="code-project">
             <h4 class="sm-project-title">Portfolio Website</h4>
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
@@ -129,12 +138,15 @@
                     <p>A website showcasing my coding, ui/ux, and design projects.
                     </p>
                     <p>Tools/Frameworks: HTML5, CSS3, JavaScript</p>
-                    <span><a class="project-btn" href="https://github.com/kimberlyflrs/code-portfolio">Github link</a> <a class="project-btn">Demo</a></span>
+                    <div class="link-div">
+                        <a class="links" href="https://github.com/kimberlyflrs/code-portfolio">Github link</a> 
+                        <a class="links">Demo</a>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="filterProject code">
+        <div class="code-project">
             <h4 class="sm-project-title">Jewlery Shop Page</h4>
             <div class="greenline"><div class="sm-project-line"></div></div>
             <div class="row2">
@@ -146,7 +158,10 @@
                     <div class="project-line"></div>
                     <p>A home page for a jewlery shop. This is a single coded home page. All other pages do not link anywhere.
                     </p>
-                    <span><a class="project-btn" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> <a class="project-btn" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a></span>
+                    <div class="link-div">
+                        <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
+                        <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a>
+                    </div>
                 </div>
             </div>
         </div>
